--- a/ColorControl/ColorControl.csproj
+++ b/ColorControl/ColorControl.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Security.AccessControl, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.AccessControl.5.0.0\lib\net461\System.Security.AccessControl.dll</HintPath>
     </Reference>
@@ -83,6 +84,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ColorModes\CircleColorMode.cs" />
+    <Compile Include="ColorModes\ScreenColorMode.cs" />
     <Compile Include="ColorModes\StrobeLightMode.cs" />
     <Compile Include="ColorModes\FlowColorMode.cs" />
     <Compile Include="ColorModes\StaticColorMode.cs" />
@@ -134,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Arduino\index.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DesktopDuplication\DesktopDuplication.csproj">
+      <Project>{964d28b5-d2db-4881-8b1f-0d474f6810c3}</Project>
+      <Name>DesktopDuplication</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
